# semordnilap

./: .ci  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.debian  Dockerfile.debian.root  Dockerfile.fedora  Dockerfile.fedora.root  Makefile  docker-compose.yml  libsemordnilap.c  libsemordnilap.h  semordnilap  semordnilap-test.sh  semordnilap.1  semordnilap.3  semordnilap.c  test
.circleci/: config.yml
tests/: apple  rewot  stressed  test  xyz
